# tg-safe-monitor

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 2026-04-21-contract-call-monitoring.md  2026-04-21-tg-safe-monitor.md  2026-04-21-unified-address-monitoring.md
src/tg_safe_monitor/: __init__.py  address_classifier.py  app.py  bot.py  bot_logic.py  config.py  contract_service.py  eoa_service.py  ethereum_rpc.py  messages.py  models.py  monitor.py  safe_api.py  service.py  storage.py
tests/: test_address_classifier.py  test_bot_logic.py  test_bot_rendering.py  test_ci_config.py  test_config.py  test_contract_service.py  test_eoa_service.py  test_messages.py  test_safe_api.py  test_service.py
